--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width" />
     <title>Cycle Tracker</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="manifest" href="cycletracker.json" />
+    <link rel="icon" href="icons/wheel.svg" />
   </head>
   <body>
     <h1>Period tracker</h1>
@@ -26,5 +28,12 @@
     </form>
     <section id="past-periods"></section>
     <script src="app.js" defer></script>
+    <!-- Register the app's service worker. -->
+    <script>
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("sw.js");
+        }
+    </script>
+
   </body>
 </html>
